Fixed donate button hover text to change color to black. Made the CCF group pic back to the large style using parallax. Changed the CCF text at the top of header to not using a picture and to use the same font as the rest of the page. Added new social media icons, and changed the existing ones to a new style. Added a slight gap between each social media icon. Added a gap between the twitter feed and the facebook feed to mimic the gap between the calendar and the twitter feed. Standardized the look of the 'Who We Are' section on the homepage. Added misc new CSS styles, and modified the drop down buttons in the header slightly to make the text appear more centered.

--- a/src/static/stylesheets/navigation_dropdown.css
+++ b/src/static/stylesheets/navigation_dropdown.css
@@ -16,7 +16,7 @@ div#navigation {
 div.top-level-dropdown {
     display: inline-block;
     border: 1px solid transparent;
-    width: 150px;
+    width: 200px;
     padding: 0px 10px;
 }
 
@@ -39,6 +39,11 @@ div.nav-btn {
     font-family: 'Josefin Sans', sans-serif;
     font-size: 16px;
     font-weight: bold;
+    line-height: 22px;
+}
+
+div.donate-btn:hover {
+  color: black;
 }
 
 div.top-level-dropdown:hover > div.nav-btn {
@@ -49,7 +54,7 @@ div.nav-dropdown-item {
     border: 1px solid transparent;
     background-color: transparent;
     height: 20px;
-    width: 148px;
+    width: 198px;
     color: black;
     padding: 5px 10px;
     margin: 0px auto;
@@ -58,6 +63,7 @@ div.nav-dropdown-item {
     cursor: pointer;
     font-family: 'Josefin Sans', sans-serif;
     font-size: 16px;
+    line-height: 24px;
 }
 
 div.nav-dropdown-item:hover {
